blog/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog
  labels:
    app: blog
spec:
  ports:
  - name: http
    port: 2368
  selector:
    app: blog
